sửa file pom.xml(client)